@@ -19,7 +19,7 @@
 
 <p align="center">
   <a href="@IMAGES@nereid-shot.png">
-    <img width="650" src="@IMAGES@nereid-shot.png" alt="nereid-shot">
+    <img width="650" src="@IMAGES@nereid-shot-small.png" alt="nereid-shot">
   </a>
 </p>
 <p align="center">
