@@ -1,5 +1,10 @@
 2005-05-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* site/images/nereid-shot-small.png (Module): don't rely on
+	browser scaling.
+
+	* site/switch/howto.html: link to scaled image.
+
 	* site/install/getting-started.html: .ly.txt clarification
 
 	* site/install/macos.html: language fixes.
